[package]
name = "acs-api-rs"
version = "0.2.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.10", features = [ "blocking", "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
